* Bugfix: Improved text cropping * Change: Allow more space for tabs (prevent linebreak)

--- a/core/asset/css/tab.css
+++ b/core/asset/css/tab.css
@@ -4,7 +4,7 @@
 #content-tabs {
 	position:relative;
 	top:-35px;
-	width:663px;
+	width:670px;
 }
 	#content-tabs li p.label span.labeltext {
 	  color:#444;
